--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           ><img src="images/logo.svg" alt="P3ntest Logo" class="m-5 mr-8"
         /></a>
         <div
-          class="hidden xl:flex flex-row flex-wrap justify-center items-center"
+          class="hidden md:flex flex-row flex-wrap justify-center items-center"
         >
           <a href="#start" class="px-4 hover:text-white">Home</a>
           <a href="#latest_work" class="px-4 hover:text-white">Latest Work</a>
@@ -91,7 +91,16 @@
           justify-center
         "
       >
-        <h1 class="text-white font-black main-header text-5xl xl:text-9xl">
+        <h1
+          class="
+            text-white
+            font-black
+            main-header
+            text-5xl
+            lg:text-8xl
+            xl:text-9xl
+          "
+        >
           Hi, I'm <br /><span class="text-val">P3ntest</span>
         </h1>
         <img
@@ -103,11 +112,11 @@
       <div
         class="
           px-5
-          xl:pl-96
+          2xl:pl-96
           pt-10
-          xl:pt-40 xl:pr-28
+          2xl:pt-40 2xl:pr-28
           pb-20
-          xl:pb-52
+          2xl:pb-52
           bg-main-darker
           relative
         "
@@ -117,10 +126,10 @@
         <div
           class="
             flex flex-col
-            xl:flex-row
+            2xl:flex-row
             w-full
             mt-10
-            xl:mt-20
+            2xl:mt-20
             text-text-card
             font-medium
             text-2xl text-center
@@ -128,7 +137,7 @@
             z-50
           "
         >
-          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mr-6" data-aos="fade-up">
+          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mr-6" data-aos="fade-up">
             <a href="https://vibingcloud.com/" target="_blank">
               <div class="card group">
                 <div
@@ -144,7 +153,7 @@
               </div>
             </a>
           </div>
-          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mx-6" data-aos="fade-up">
+          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mx-6" data-aos="fade-up">
             <div class="card group">
               <div
                 class="card-image"
@@ -156,10 +165,10 @@
                 Discord Bots for NFT and Crypto Trading Community | Tracker,
                 Leaderboards, Price Watcher
               </p>
-              <p class="card-footer">HTML · CSS · JS</p>
+              <p class="card-footer">NODE · DISCORD.JS · TS</p>
             </div>
           </div>
-          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mx-6" data-aos="fade-up">
+          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mx-6" data-aos="fade-up">
             <div class="card group">
               <div
                 class="card-image"
@@ -171,10 +180,10 @@
                 Truth or Dare Game Website including full backend with data
                 fetching
               </p>
-              <p class="card-footer">HTML · CSS · JS</p>
+              <p class="card-footer">REACT · SQL · TS</p>
             </div>
           </div>
-          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:ml-6" data-aos="fade-up">
+          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:ml-6" data-aos="fade-up">
             <a href="https://discordcp.dev/" target="_blank">
               <div class="card group">
                 <div
@@ -186,7 +195,7 @@
                 <p class="p-10">
                   Discord bot Web-Config Creator Tool for Developers
                 </p>
-                <p class="card-footer">HTML · CSS · JS</p>
+                <p class="card-footer">SVELTE-KIT · TAILWIND · MONGODB</p>
               </div>
             </a>
           </div>
@@ -196,16 +205,16 @@
           class="
             w-full
             flex flex-col
-            xl:flex-row
+            2xl:flex-row
             justify-items-stretch
             relative
           "
         >
           <div id="services" class="absolute" style="top: -120px"></div>
-          <div class="flex-1 xl:mr-20">
-            <h1 class="section-header mb-10 xl:mb-16">MY SERVICES</h1>
+          <div class="flex-1 2xl:mr-20">
+            <h1 class="section-header mb-10 2xl:mb-16">MY SERVICES</h1>
             <div class="w-full">
-              <div class="w-full flex flex-col xl:flex-row xl:mb-7">
+              <div class="w-full flex flex-col 2xl:flex-row 2xl:mb-7">
                 <a href="#discord_bots" class="service" data-aos="fade-up">
                   <div class="service-icons">
                     <img src="images/features/discord.svg" alt="Discord Logo" />
@@ -221,7 +230,7 @@
                   <div class="service-footer">Backend Development</div>
                 </div>
               </div>
-              <div class="w-full flex flex-col xl:flex-row">
+              <div class="w-full flex flex-col 2xl:flex-row">
                 <div class="service" data-aos="fade-up">
                   <div class="service-icons">
                     <img src="images/features/design.svg" alt="Discord Logo" />
@@ -239,9 +248,9 @@
               </div>
             </div>
           </div>
-          <div class="divider flex-0 block xl:hidden"></div>
+          <div class="divider flex-0 block 2xl:hidden"></div>
           <div class="flex-0">
-            <h1 class="section-header mb-10 xl:mb-16">CONTACT ME</h1>
+            <h1 class="section-header mb-10 2xl:mb-16">CONTACT ME</h1>
             <div>
               <a href="https://discord.gg/UhhFjzTb39">
                 <div class="socials" data-aos="fade-left">
@@ -299,7 +308,7 @@
           </div>
         </div>
         <div class="divider"></div>
-        <div class="w-full relative xl:pr-52">
+        <div class="w-full relative 2xl:pr-52">
           <div id="reviews" class="absolute" style="top: -120px"></div>
           <img
             src="images/decoration/barcode.svg"
@@ -308,9 +317,9 @@
             data-aos="fade-left"
           />
           <div class="w-full">
-            <h1 class="section-header mb-10 xl:mb-16">CLIENT REVIEWS</h1>
-            <div class="row xl:mb-8">
-              <div class="review xl:mr-4" data-aos="fade-up">
+            <h1 class="section-header mb-10 2xl:mb-16">CLIENT REVIEWS</h1>
+            <div class="row 2xl:mb-8">
+              <div class="review 2xl:mr-4" data-aos="fade-up">
                 <h1>BANKERS</h1>
                 <p>
                   “Very down-to-earth, respectable and professional developer. I
@@ -320,7 +329,7 @@
                 </p>
                 <h3>June 2020 · Discord Bot</h3>
               </div>
-              <div class="review xl:ml-4" data-aos="fade-up">
+              <div class="review 2xl:ml-4" data-aos="fade-up">
                 <h1>YAN CINTRO</h1>
                 <p>
                   “P3ntest helped me build my dream minecraft server. He not
@@ -334,7 +343,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="review xl:mr-4" data-aos="fade-up">
+              <div class="review 2xl:mr-4" data-aos="fade-up">
                 <h1>TEEMOKINGDOM</h1>
                 <p>
                   “The developer always responded almost instantly and kept
@@ -347,20 +356,20 @@
                 </p>
                 <h3>November 2021 · Web Design</h3>
               </div>
-              <div class="review xl:ml-4" data-aos="fade-up">
+              <div class="review 2xl:ml-4" data-aos="fade-up">
                 <h1>TEFER</h1>
                 <p>
                   “Fast, easy to work with and friendly. He finished my stock
                   trading site’s backend within 7 days.”
                 </p>
-                <h3>March 2019 · MC Plugin</h3>
+                <h3>December 2019 · Node App</h3>
               </div>
             </div>
           </div>
         </div>
         <div class="divider"></div>
         <div>
-          <div class="w-full xl:pr-96 relative">
+          <div class="w-full 2xl:pr-96 relative">
             <div id="discord_bots" class="absolute" style="top: -120px"></div>
             <img
               src="images/decoration/botcard.svg"
@@ -377,7 +386,7 @@
               in the web browser instead of having to fiddle around with
               annoying JSON and YAML files.
             </p>
-            <div class="row xl:mb-8 mt-7 xl:mt-12">
+            <div class="row 2xl:mb-8 mt-7 2xl:mt-12">
               <div class="discord-bot-feature" data-aos="fade-up">
                 <h1>PROFESSIONAL AND CLEAN CODE</h1>
                 <div>
