--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="lib/smoothscroll.js"></script>
   </head>
   <body class="overflow-x-hidden">
-    <div class="relative" id="start">
+    <div class="relative overflow-x-hidden" id="start">
       <div class="h-full overflow-hidden absolute top-0 left-0 w-60">
         <div
           style="
@@ -112,11 +112,11 @@
       <div
         class="
           px-5
-          2xl:pl-96
+          xl:pl-96
           pt-10
-          2xl:pt-40 2xl:pr-28
+          xl:pt-40 xl:pr-28
           pb-20
-          2xl:pb-52
+          xl:pb-52
           bg-main-darker
           relative
         "
@@ -126,10 +126,10 @@
         <div
           class="
             flex flex-col
-            2xl:flex-row
+            xl:flex-row
             w-full
             mt-10
-            2xl:mt-20
+            md:mt-20
             text-text-card
             font-medium
             text-2xl text-center
@@ -137,7 +137,7 @@
             z-50
           "
         >
-          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mr-6" data-aos="fade-up">
+          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mr-6" data-aos="fade-up">
             <a href="https://vibingcloud.com/" target="_blank">
               <div class="card group">
                 <div
@@ -153,7 +153,7 @@
               </div>
             </a>
           </div>
-          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mx-6" data-aos="fade-up">
+          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mx-6" data-aos="fade-up">
             <div class="card group">
               <div
                 class="card-image"
@@ -168,7 +168,7 @@
               <p class="card-footer">NODE · DISCORD.JS · TS</p>
             </div>
           </div>
-          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:mx-6" data-aos="fade-up">
+          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mx-6" data-aos="fade-up">
             <div class="card group">
               <div
                 class="card-image"
@@ -183,7 +183,7 @@
               <p class="card-footer">REACT · SQL · TS</p>
             </div>
           </div>
-          <div class="mb-6 2xl:mb-0 2xl:w-1/4 2xl:ml-6" data-aos="fade-up">
+          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:ml-6" data-aos="fade-up">
             <a href="https://discordcp.dev/" target="_blank">
               <div class="card group">
                 <div
@@ -205,16 +205,16 @@
           class="
             w-full
             flex flex-col
-            2xl:flex-row
+            xl:flex-row
             justify-items-stretch
             relative
           "
         >
           <div id="services" class="absolute" style="top: -120px"></div>
-          <div class="flex-1 2xl:mr-20">
-            <h1 class="section-header mb-10 2xl:mb-16">MY SERVICES</h1>
+          <div class="flex-1 xl:mr-20">
+            <h1 class="section-header mb-10 md:mb-16">MY SERVICES</h1>
             <div class="w-full">
-              <div class="w-full flex flex-col 2xl:flex-row 2xl:mb-7">
+              <div class="w-full flex flex-col xl:flex-row xl:mb-7">
                 <a href="#discord_bots" class="service" data-aos="fade-up">
                   <div class="service-icons">
                     <img src="images/features/discord.svg" alt="Discord Logo" />
@@ -230,7 +230,7 @@
                   <div class="service-footer">Backend Development</div>
                 </div>
               </div>
-              <div class="w-full flex flex-col 2xl:flex-row">
+              <div class="w-full flex flex-col xl:flex-row">
                 <div class="service" data-aos="fade-up">
                   <div class="service-icons">
                     <img src="images/features/design.svg" alt="Discord Logo" />
@@ -248,9 +248,9 @@
               </div>
             </div>
           </div>
-          <div class="divider flex-0 block 2xl:hidden"></div>
+          <div class="divider flex-0 block md:hidden"></div>
           <div class="flex-0">
-            <h1 class="section-header mb-10 2xl:mb-16">CONTACT ME</h1>
+            <h1 class="section-header mb-10 md:mb-16">CONTACT ME</h1>
             <div>
               <a href="https://discord.gg/UhhFjzTb39">
                 <div class="socials" data-aos="fade-left">
@@ -308,7 +308,7 @@
           </div>
         </div>
         <div class="divider"></div>
-        <div class="w-full relative 2xl:pr-52">
+        <div class="w-full relative xl:pr-52">
           <div id="reviews" class="absolute" style="top: -120px"></div>
           <img
             src="images/decoration/barcode.svg"
@@ -317,9 +317,9 @@
             data-aos="fade-left"
           />
           <div class="w-full">
-            <h1 class="section-header mb-10 2xl:mb-16">CLIENT REVIEWS</h1>
-            <div class="row 2xl:mb-8">
-              <div class="review 2xl:mr-4" data-aos="fade-up">
+            <h1 class="section-header mb-10 md:mb-16">CLIENT REVIEWS</h1>
+            <div class="row xl:mb-8">
+              <div class="review xl:mr-4" data-aos="fade-up">
                 <h1>BANKERS</h1>
                 <p>
                   “Very down-to-earth, respectable and professional developer. I
@@ -329,7 +329,7 @@
                 </p>
                 <h3>June 2020 · Discord Bot</h3>
               </div>
-              <div class="review 2xl:ml-4" data-aos="fade-up">
+              <div class="review xl:ml-4" data-aos="fade-up">
                 <h1>YAN CINTRO</h1>
                 <p>
                   “P3ntest helped me build my dream minecraft server. He not
@@ -343,7 +343,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="review 2xl:mr-4" data-aos="fade-up">
+              <div class="review xl:mr-4" data-aos="fade-up">
                 <h1>TEEMOKINGDOM</h1>
                 <p>
                   “The developer always responded almost instantly and kept
@@ -356,7 +356,7 @@
                 </p>
                 <h3>November 2021 · Web Design</h3>
               </div>
-              <div class="review 2xl:ml-4" data-aos="fade-up">
+              <div class="review xl:ml-4" data-aos="fade-up">
                 <h1>TEFER</h1>
                 <p>
                   “Fast, easy to work with and friendly. He finished my stock
@@ -369,7 +369,7 @@
         </div>
         <div class="divider"></div>
         <div>
-          <div class="w-full 2xl:pr-96 relative">
+          <div class="w-full xl:pr-96 relative">
             <div id="discord_bots" class="absolute" style="top: -120px"></div>
             <img
               src="images/decoration/botcard.svg"
@@ -386,7 +386,7 @@
               in the web browser instead of having to fiddle around with
               annoying JSON and YAML files.
             </p>
-            <div class="row 2xl:mb-8 mt-7 2xl:mt-12">
+            <div class="row md:mb-8 mt-7 md:mt-12">
               <div class="discord-bot-feature" data-aos="fade-up">
                 <h1>PROFESSIONAL AND CLEAN CODE</h1>
                 <div>
