--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           class="
             absolute
             decoration decoration-p3ntest
+            2xl:block
             w-60
             h-full
             z-20
@@ -112,9 +113,11 @@
       <div
         class="
           px-5
-          xl:pl-96
+          2xl:pl-96
           pt-10
-          xl:pt-40 xl:pr-28
+          xl:pt-40
+          2xl:pr-28
+          xl:pr-16 xl:pl-16
           pb-20
           xl:pb-52
           bg-main-darker
@@ -313,7 +316,7 @@
           <img
             src="images/decoration/barcode.svg"
             alt=""
-            class="decoration right-0 top-0 h-full"
+            class="decoration right-0 top-0 h-full xl:block"
             data-aos="fade-left"
           />
           <div class="w-full">
@@ -324,8 +327,8 @@
                 <p>
                   “Very down-to-earth, respectable and professional developer. I
                   can recommend him to anyone in need of a discord bot! He
-                  provided me with an easy-to-use web interface to change
-                  settings of my product.”
+                  provided me with an eCLIENT REVasy-to-use web interface to
+                  change settings of my product.”
                 </p>
                 <h3>June 2020 · Discord Bot</h3>
               </div>
@@ -374,7 +377,7 @@
             <img
               src="images/decoration/botcard.svg"
               alt=""
-              class="decoration right-0"
+              class="decoration right-0 xl:block"
               data-aos="fade-left"
             />
             <h1 class="section-header mb-10">DISCORD BOTS</h1>
