--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <p>
                   “Very down-to-earth, respectable and professional developer. I
                   can recommend him to anyone in need of a discord bot! He
-                  provided me with an eCLIENT REVasy-to-use web interface to
+                  provided me with an easy-to-use web interface to
                   change settings of my product.”
                 </p>
                 <h3>June 2020 · Discord Bot</h3>
