--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           <a href="#start" class="px-4 hover:text-white">Home</a>
           <a href="#latest_work" class="px-4 hover:text-white">Latest Work</a>
           <a href="#services" class="px-4 hover:text-white">Services</a>
+          <a href="#contact" class="px-4 hover:text-white">Contact</a>
           <a href="#reviews" class="px-4 hover:text-white">Reviews</a>
+          <a href="#discord" class="px-4 hover:text-white">Discord</a>
         </div>
       </div>
       <script>
@@ -253,6 +255,7 @@
           </div>
           <div class="divider flex-0 block md:hidden"></div>
           <div class="flex-0">
+            <div id="contact" class="absolute" style="top: -120px"></div>
             <h1 class="section-header mb-10 md:mb-16">CONTACT ME</h1>
             <div>
               <a href="https://discord.gg/UhhFjzTb39">
@@ -294,7 +297,7 @@
                   </div>
                 </div>
               </a>
-              <a href="https://twitter.com/JuliusVoorden">
+              <a href="https://twitter.com/p3ntest">
                 <div class="socials" data-aos="fade-left">
                   <div class="socials-image-body">
                     <div class="socials-image">
@@ -439,6 +442,7 @@
         </div>
       </div>
       <div class="bg-main p-20 flex flex-col items-center z-30 relative">
+        <div id="discord" class="absolute" style="top: -120px"></div>
         <h1
           class="uppercase text-val text-6xl font-black tracking-tighter mb-16"
         >
@@ -456,7 +460,7 @@
       <div
         class="bg-black text-white-light w-full p-4 text-center relative z-30"
       >
-        COPYRIGHT 2021 © P3NTEST
+        COPYRIGHT 2022 © P3NTEST
       </div>
       <script>
         AOS.init();
