--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
       </div>
 
       <div class="nav" id="nav">
+        <div
+        class="flex flex-row flex-wrap justify-center items-center"
+        >
+        <a href="#start" class="navlink">Home</a>
+        <a href="#latest_work" class="navlink">Latest Work</a>
+        <a href="#services" class="navlink">Services</a>
         <a href="/"
           ><img src="images/logo.svg" alt="P3ntest Logo" class="m-5 mr-8"
         /></a>
-        <div
-          class="hidden md:flex flex-row flex-wrap justify-center items-center"
-        >
-          <a href="#start" class="px-4 hover:text-white">Home</a>
-          <a href="#latest_work" class="px-4 hover:text-white">Latest Work</a>
-          <a href="#services" class="px-4 hover:text-white">Services</a>
-          <a href="#contact" class="px-4 hover:text-white">Contact</a>
-          <a href="#reviews" class="px-4 hover:text-white">Reviews</a>
-          <a href="#discord" class="px-4 hover:text-white">Discord</a>
+          <a href="#contact" class="navlink">Contact</a>
+          <a href="#reviews" class="navlink">Reviews</a>
+          <a href="#discord" class="navlink">Discord</a>
         </div>
       </div>
       <script>
