link p3ntest on footer

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   provided me with an easy-to-use web interface to
                   change settings of my product.”
                 </p>
-                <h3>June 2020 · Discord Bot</h3>
+                <h3>March 2022 · Discord Bot</h3>
               </div>
               <div class="review xl:ml-4" data-aos="fade-up">
                 <h1>YAN CINTRO</h1>
@@ -460,7 +460,7 @@
       <div
         class="bg-black text-white-light w-full p-4 text-center relative z-30"
       >
-        COPYRIGHT <span id="year">2022</span> © P3NTEST
+        COPYRIGHT <span id="year">2022</span> © <a href="https://github.com/p3ntest">P3NTEST</a>
         <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
       </div>
       <script>
