update recent work

--- a/index.html
+++ b/index.html
@@ -41,28 +41,18 @@
             background-repeat: no-repeat;
           "
           alt="P3ntest Development"
-          class="
-            absolute
-            decoration decoration-p3ntest
-            2xl:block
-            w-60
-            h-full
-            z-20
-            overflow-hidden
-          "
+          class="absolute decoration decoration-p3ntest 2xl:block w-60 h-full z-20 overflow-hidden"
         ></div>
       </div>
 
       <div class="nav" id="nav">
-        <div
-        class="flex flex-row flex-wrap justify-center items-center"
-        >
-        <a href="#start" class="navlink">Home</a>
-        <a href="#latest_work" class="navlink">Latest Work</a>
-        <a href="#services" class="navlink">Services</a>
-        <a href="/"
-          ><img src="images/logo.svg" alt="P3ntest Logo" class="m-5 mr-8"
-        /></a>
+        <div class="flex flex-row flex-wrap justify-center items-center">
+          <a href="#start" class="navlink">Home</a>
+          <a href="#latest_work" class="navlink">Latest Work</a>
+          <a href="#services" class="navlink">Services</a>
+          <a href="/"
+            ><img src="images/logo.svg" alt="P3ntest Logo" class="m-5 mr-8"
+          /></a>
           <a href="#contact" class="navlink">Contact</a>
           <a href="#reviews" class="navlink">Reviews</a>
           <a href="#discord" class="navlink">Discord</a>
@@ -85,24 +75,10 @@
         }
       </script>
       <div
-        class="
-          h-screen
-          bg-main
-          flex flex-col
-          xl:flex-row
-          items-center
-          justify-center
-        "
+        class="h-screen bg-main flex flex-col xl:flex-row items-center justify-center"
       >
         <h1
-          class="
-            text-white
-            font-black
-            main-header
-            text-5xl
-            lg:text-8xl
-            xl:text-9xl
-          "
+          class="text-white font-black main-header text-5xl lg:text-8xl xl:text-9xl"
         >
           Hi, I'm <br /><span class="text-val">P3ntest</span>
         </h1>
@@ -113,48 +89,26 @@
         />
       </div>
       <div
-        class="
-          px-5
-          2xl:pl-96
-          pt-10
-          xl:pt-40
-          2xl:pr-28
-          xl:pr-16 xl:pl-16
-          pb-20
-          xl:pb-52
-          bg-main-darker
-          relative
-        "
+        class="px-5 2xl:pl-96 pt-10 xl:pt-40 2xl:pr-28 xl:pr-16 xl:pl-16 pb-20 xl:pb-52 bg-main-darker relative"
       >
         <div id="latest_work" class="absolute" style="top: -20px"></div>
         <h1 class="section-header">MY LATEST WORK</h1>
         <div
-          class="
-            flex flex-col
-            xl:flex-row
-            w-full
-            mt-10
-            md:mt-20
-            text-text-card
-            font-medium
-            text-2xl text-center
-            items-stretch
-            z-50
-          "
+          class="flex flex-col xl:flex-row w-full mt-10 md:mt-20 text-text-card font-medium text-2xl text-center items-stretch z-50"
         >
           <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mr-6" data-aos="fade-up">
-            <a href="https://vibingcloud.com/" target="_blank">
+            <a href="https://github.com/P3ntest/hmi" target="_blank">
               <div class="card group">
                 <div
                   class="card-image"
-                  style="background-image: url('images/work/vb.png')"
+                  style="background-image: url('images/work/hmi.png')"
                 >
                   <span class="hover-mask mix-blend-multiply"></span>
                 </div>
                 <p class="p-10">
-                  Vibing Cloud: Video Game Cheating Software Index Page
+                  Hospital Food Management System | Web App for Hospital
                 </p>
-                <p class="card-footer">HTML · CSS · JS</p>
+                <p class="card-footer">REMIX-RUN · PRISMA · TYPESCRIPT · SPA</p>
               </div>
             </a>
           </div>
@@ -174,46 +128,45 @@
             </div>
           </div>
           <div class="mb-6 xl:mb-0 xl:w-1/4 xl:mx-6" data-aos="fade-up">
-            <div class="card group">
-              <div
-                class="card-image"
-                style="background-image: url('images/work/tod.png')"
-              >
-                <span class="hover-mask mix-blend-multiply"></span>
-              </div>
-              <p class="p-10">
-                Truth or Dare Game Website including full backend with data
-                fetching
-              </p>
-              <p class="card-footer">REACT · SQL · TS</p>
-            </div>
-          </div>
-          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:ml-6" data-aos="fade-up">
-            <a href="https://discordcp.dev/" target="_blank">
+            <a
+              href="https://github.com/P3ntest/covid-prevention-simulator"
+              target="_blank"
+            >
               <div class="card group">
                 <div
                   class="card-image"
-                  style="background-image: url('images/work/dcp.png')"
+                  style="background-image: url('images/work/cps.png')"
+                >
+                  <span class="hover-mask mix-blend-multiply"></span>
+                </div>
+                <p class="p-10">Coding Prevention Simulator | Web based Game</p>
+                <p class="card-footer">JAVASCRIPT · PIXIJS · WEB RENDERING</p>
+              </div>
+            </a>
+          </div>
+          <div class="mb-6 xl:mb-0 xl:w-1/4 xl:ml-6" data-aos="fade-up">
+            <a href="https://confly.dev/" target="_blank">
+              <div class="card group">
+                <div
+                  class="card-image"
+                  style="background-image: url('images/work/confly.png')"
                 >
                   <span class="hover-mask mix-blend-multiply"></span>
                 </div>
                 <p class="p-10">
-                  Discord bot Web-Config Creator Tool for Developers
+                  Remote Config as a Service Provider | CTO and general
+                  technical Lead
                 </p>
-                <p class="card-footer">SVELTE-KIT · TAILWIND · MONGODB</p>
+                <p class="card-footer">
+                  REACT · TAILWIND · REMIX-RUN · DOCKER · PRISMA
+                </p>
               </div>
             </a>
           </div>
         </div>
         <div class="divider"></div>
         <div
-          class="
-            w-full
-            flex flex-col
-            xl:flex-row
-            justify-items-stretch
-            relative
-          "
+          class="w-full flex flex-col xl:flex-row justify-items-stretch relative"
         >
           <div id="services" class="absolute" style="top: -120px"></div>
           <div class="flex-1 xl:mr-20">
@@ -330,8 +283,8 @@
                 <p>
                   “Very down-to-earth, respectable and professional developer. I
                   can recommend him to anyone in need of a discord bot! He
-                  provided me with an easy-to-use web interface to
-                  change settings of my product.”
+                  provided me with an easy-to-use web interface to change
+                  settings of my product.”
                 </p>
                 <h3>March 2022 · Discord Bot</h3>
               </div>
@@ -460,8 +413,11 @@
       <div
         class="bg-black text-white-light w-full p-4 text-center relative z-30"
       >
-        COPYRIGHT <span id="year">2022</span> © <a href="https://github.com/p3ntest">P3NTEST</a>
-        <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
+        COPYRIGHT <span id="year">2022</span> ©
+        <a href="https://github.com/p3ntest">P3NTEST</a>
+        <script>
+          document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
       </div>
       <script>
         AOS.init();
